@@ -1,5 +1,10 @@
 2025-02-24  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>
 
+	* howm-vars.el (howm-view-use-grep):
+	disable grep for windows by default
+	https://github.com/kaorahi/howm/issues/6
+	thx > Artsiom K san (@artsi0m)
+
 	* howm-vars.el (howm-view-grep-command):
 	use grep-program as the default value
 	https://github.com/kaorahi/howm/issues/44#issuecomment-2646208314
